frame module z-index fix

--- a/themes/ardit/scss/app.scss
+++ b/themes/ardit/scss/app.scss
@@ -1363,6 +1363,6 @@ nav.navbar {
   position: absolute;
   top: 380px;
   //right: 200px;
-  z-index: 3;
+  z-index: 2;
   transform: translateY(-50%);
 }
